# -dsba-prog-2021spring-wshps05-06

./: README.md
code/src/: CMakeLists.txt
code/src/problem1_name/: main.cpp
code/src/problem2_name_with_spaces/: main.cpp
code/src/problem4_type_conversion/: main.cpp
code/src/problem5_split_and_output/: main.cpp
code/src/problem6_avgfunc/: main.cpp
code/src/problem7_read_from_stream/: main.cpp
code/src/problem8_files/: main.cpp
